energy up not work

--- a/templates/page1.html
+++ b/templates/page1.html
@@ -549,7 +549,7 @@
 <script src="{{ url_for('static', filename='script.js') }}"></script>
 <script src="{{ url_for('static', filename='script_up.js') }}"></script>
 <script src="{{ url_for('static', filename='script_heroes.js') }}"></script>
-
+<script src="{{ url_for('static', filename='script_up_energy.js') }}"></script>
 
 
 </body>
