--- a/static/style.css
+++ b/static/style.css
@@ -1333,7 +1333,10 @@ body.up_page {
   font-size: 14px;
   color: #d1a34a;
 }
-
+.item-details_4 {
+  font-size: 14px;
+  color: #d1a34a;
+}
 .item-action {
   font-size: 20px;
   color: #d1a34a;
@@ -1419,6 +1422,15 @@ body.up_page {
     z-index: 998;
 }
 .overlay_3 {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 998;
+}
+.overlay_4 {
     position: fixed;
     top: 0;
     left: 0;
@@ -1563,7 +1575,16 @@ body.up_page {
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
-
+.upgrade-button_4 {
+    background-color: #ffaa00;
+    border: none;
+    border-radius: 10px;
+    color: #ffffff;
+    font-size: 18px;
+    padding: 10px 20px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
 .upgrade-message {
   position: fixed;
   top: 20px;
