--- a/templates/page1.html
+++ b/templates/page1.html
@@ -327,7 +327,7 @@
     <div class="item-icon">🔄</div>
     <div class="item-info">
       <p class="item-title">Скорость перезарядки</p>
-      <p class="item-details">100 • Уровень 1</p>
+      <p class="item-details_4">100 • Уровень 1</p>
     </div>
     <div class="item-action">></div>
   </div>
@@ -423,7 +423,7 @@
 
 <div class="background">
     <!-- Слой затемнения -->
-    <div class="overlay" style="display: none;"></div>
+    <div class="overlay_4" style="display: none;"></div>
 
     <!-- Окно -->
     <div class="container_up_buy_4" style="display: none;">
@@ -445,9 +445,9 @@
         <div class="price_up_buy">
             <!-- Картинка монеты -->
             <img class="coin-icon" src="/static/images/coin.png" alt="Монета" />
-            <span class="coin">2,000</span>
+            <span class="coin_up4">2,000</span>
         </div>
-        <button class="upgrade-button">УЛУЧШИТЬ</button>
+        <button class="upgrade-button_4">УЛУЧШИТЬ</button>
     </div>
 </div>
   </div>
@@ -550,6 +550,7 @@
 <script src="{{ url_for('static', filename='script_up.js') }}"></script>
 <script src="{{ url_for('static', filename='script_heroes.js') }}"></script>
 <script src="{{ url_for('static', filename='script_up_energy.js') }}"></script>
+<script src="{{ url_for('static', filename='script_up_recovery.js') }}"></script>
 
 
 </body>
