--- a/templates/page1.html
+++ b/templates/page1.html
@@ -53,10 +53,16 @@
     <img src="/static/images/coin.png" alt="Монеты">
   </div>
 
+<button id="increaseEnergyButton">Увеличить восстановление энергии на 20</button>
+<p id="energyRecoveryRateDisplay" style="color: white;">Скорость восстановления энергии: 5</p>
+
+<button id="upgradeCoinsButton">Улучшить монеты за клик</button>
+<p id="coinsPerClickDisplay" style="color: white;">Монет за клик: 1</p>
+
   <!-- Контейнер для анимации монет -->
   <div id="coinContainer"></div> <!-- Контейнер для монет с анимацией -->
 
-  <img id="clickButton" onclick="spawnCoins(event)">
+<img id="clickButton"> <!-- Добавляем src и курсор pointer -->
 
   <div class="icon-container">
     <img src="/static/images/icon.png" alt="Иконка" width="75">
@@ -327,7 +333,7 @@
     <div class="item-icon">🔄</div>
     <div class="item-info">
       <p class="item-title">Скорость перезарядки</p>
-      <p class="item-details_4">100 • Уровень 1</p>
+      <p class="item-details">100 • Уровень 1</p>
     </div>
     <div class="item-action">></div>
   </div>
@@ -423,7 +429,7 @@
 
 <div class="background">
     <!-- Слой затемнения -->
-    <div class="overlay_4" style="display: none;"></div>
+    <div class="overlay" style="display: none;"></div>
 
     <!-- Окно -->
     <div class="container_up_buy_4" style="display: none;">
@@ -445,9 +451,9 @@
         <div class="price_up_buy">
             <!-- Картинка монеты -->
             <img class="coin-icon" src="/static/images/coin.png" alt="Монета" />
-            <span class="coin_up4">2,000</span>
+            <span class="coin">2,000</span>
         </div>
-        <button class="upgrade-button_4">УЛУЧШИТЬ</button>
+        <button class="upgrade-button">УЛУЧШИТЬ</button>
     </div>
 </div>
   </div>
@@ -549,8 +555,8 @@
 <script src="{{ url_for('static', filename='script.js') }}"></script>
 <script src="{{ url_for('static', filename='script_up.js') }}"></script>
 <script src="{{ url_for('static', filename='script_heroes.js') }}"></script>
-<script src="{{ url_for('static', filename='script_up_energy.js') }}"></script>
 <script src="{{ url_for('static', filename='script_up_recovery.js') }}"></script>
+<script src="{{ url_for('static', filename='script_up_energy.js') }}"></script>
 
 
 </body>
