--- a/templates/page1.html
+++ b/templates/page1.html
@@ -53,14 +53,16 @@
     <img src="/static/images/coin.png" alt="Монеты">
   </div>
 
-  <!-- Контейнер для анимации монет -->
-  <div id="coinContainer"></div> <!-- Контейнер для монет с анимацией -->
-<button id="increaseEnergyButton">Увеличить восстановление энергии на 20</button>
+
 <p id="energyRecoveryRateDisplay" style="color: white;">Скорость восстановления энергии: 5</p>
 
+<button id="upgradeCoinsButton">Улучшить монеты за клик</button>
+<p id="coinsPerClickDisplay" style="color: white;">Монет за клик: 1</p>
 
+  <!-- Контейнер для анимации монет -->
+  <div id="coinContainer"></div> <!-- Контейнер для монет с анимацией -->
 
-  <img id="clickButton">
+<img id="clickButton"> <!-- Добавляем src и курсор pointer -->
 
   <div class="icon-container">
     <img src="/static/images/icon.png" alt="Иконка" width="75">
@@ -136,7 +138,7 @@
   </div>
 
 <!-- Магазин -->
-  <div class="page" id="shop" style="display:none;">
+  <div class="page" id="shop" style="display:none;height: 1000px;">
 <p class="score"><span class="currentScore">0</span></p>
 <div class="coin">
     <img src="/static/images/coin.png" alt="Монеты" width="80">
@@ -297,8 +299,6 @@
           <!-- Магазин улучшения -->
   <div id="upgrades" class="content-section" style="display:none;">
 <p class="score"><span class="currentScore">0</span></p>
-
-
 <div class="coin">
     <img src="/static/images/coin.png" alt="Монеты" width="80">
 </div>
@@ -332,7 +332,7 @@
     <div class="item-icon">🔄</div>
     <div class="item-info">
       <p class="item-title">Скорость перезарядки</p>
-      <p class="item-details_4">100 • Уровень 1</p>
+      <p class="item-details_4">3 • Уровень 1</p>
     </div>
     <div class="item-action">></div>
   </div>
@@ -553,9 +553,8 @@
 <script src="{{ url_for('static', filename='script_new.js') }}"></script>
 <script src="{{ url_for('static', filename='script.js') }}"></script>
 <script src="{{ url_for('static', filename='script_up.js') }}"></script>
-<script src="{{ url_for('static', filename='script_heroes.js') }}"></script>
 <script src="{{ url_for('static', filename='script_up_recovery.js') }}"></script>
-<script src="{{ url_for('static', filename='script_up_energy.js') }}"></script>
+<script src="{{ url_for('static', filename='script_heroes.js') }}"></script>
 
 
 </body>
