--- a/static/style.css
+++ b/static/style.css
@@ -53,22 +53,25 @@ body {
 
 .energy-container {
     position: fixed;
-    bottom: 100px;
-    left: 10px;
-    width: 200px; /* Фиксированная ширина */
-    height: 20px;
+    bottom: 130px;    /* Контейнер будет располагаться снизу */
+    right: 20px;      /* Контейнер будет располагаться слева */
+    width: 25px;     /* Фиксированная ширина контейнера */
+    height: 100px;   /* Высота контейнера */
     background-color: #ddd;
     border-radius: 10px;
     overflow: hidden;
     border: 2px solid #42AAFF; /* Обводка контейнера */
+    display: flex;
+    flex-direction: column-reverse; /* Элементы будут располагаться снизу вверх */
 }
 
 .energy-bar {
-    height: 100%;
-    width: 100%;
+    width: 100%;           /* Ширина будет равна ширине контейнера */
+    height: 0%;            /* Изначально высота будет 0% */
     background-color: #2196f3;
-    transition: width 0.3s;
+    transition: height 0.3s ease; /* Плавное увеличение высоты */
 }
+
 
 .navigation {
     position: fixed;
@@ -195,7 +198,7 @@ body {
     height: 50px;
     font-family: 'Pusia-bold', sans-serif; /* Шрифт */
     font-size: 22px; /* Размер шрифта */
-    color: white; /* Цвет текста */
+    color: #ffd700; /* Цвет текста */
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 1.5); /* Тень текста */
 }
 .coin img {
