--- a/templates/page1.html
+++ b/templates/page1.html
@@ -61,7 +61,7 @@
   <!-- Контейнер для анимации монет -->
   <div id="coinContainer"></div> <!-- Контейнер для монет с анимацией -->
 
-<img id="clickButton" src="/static/images/croco.png"> <!-- Добавляем src и курсор pointer -->
+<img id="clickButton" <!-- Добавляем src и курсор pointer -->
 
   <div class="icon-container">
     <img src="/static/images/icon.png" alt="Иконка" width="75">
