--- a/templates/page1.html
+++ b/templates/page1.html
@@ -61,7 +61,7 @@
   <!-- Контейнер для анимации монет -->
   <div id="coinContainer"></div> <!-- Контейнер для монет с анимацией -->
 
-<img id="clickButton" <!-- Добавляем src и курсор pointer -->
+<img id="clickButton"> <!-- Добавляем src и курсор pointer -->
 
   <div class="icon-container">
     <img src="/static/images/icon.png" alt="Иконка" width="75">
@@ -77,9 +77,12 @@
     <div class="progress-label" id="progressLabel"></div>
 
     <!-- Полоса энергии -->
-    <div class="energy-container">
-      <div class="energy-bar" id="energyBar">100</div>
-    </div>
+<!-- Отображение уровня энергии -->
+<div class="energy-status">
+  <span id="currentEnergyLabel">Текущая энергия: 100</span>
+  <span id="maxEnergyLabel">Максимальная энергия: 100</span>
+</div>
+
       <div class="dropdown">
     <img src="/static/images/menu.png" alt="Меню" id="menu-icon">
 
@@ -290,6 +293,18 @@
       <div class="character" data-id="12" data-name="Character 12" data-img="/static/images/drako.png" data-description="Water is calm and adaptable, flowing through challenges.">
     <img src="/static/images/drako.png" alt="Character 12">
     <p>Character 12</p>
+  </div>
+          <div class="character" data-id="13" data-name="Character 13" data-img="/static/images/angel.png" data-description="Water is calm and adaptable, flowing through challenges.">
+    <img src="/static/images/angel.png" alt="Character 12">
+    <p>Character 13</p>
+  </div>
+          <div class="character" data-id="14" data-name="Character 14" data-img="/static/images/leon.png" data-description="Water is calm and adaptable, flowing through challenges.">
+    <img src="/static/images/leon.png" alt="Character 12">
+    <p>Character 14</p>
+  </div>
+          <div class="character" data-id="15" data-name="Character 15" data-img="/static/images/pumpkin.png" data-description="Water is calm and adaptable, flowing through challenges.">
+    <img src="/static/images/pumpkin.png" alt="Character 12">
+    <p>Character 15</p>
   </div>
 </div>
     </div>
@@ -564,8 +579,11 @@
 <script src="{{ url_for('static', filename='script.js') }}"></script>
 <script src="{{ url_for('static', filename='script_up.js') }}"></script>
 <script src="{{ url_for('static', filename='script_up_recovery.js') }}"></script>
+<script src="{{ url_for('static', filename='script_up_energy.js') }}"></script>
 <script src="{{ url_for('static', filename='script_heroes.js') }}"></script>
+<script src="{{ url_for('static', filename='script_autoclicker.js') }}"></script>
 <script src="{{ url_for('static', filename='boss.js') }}"></script>
+
 
 
 </body>
