--- a/templates/page1.html
+++ b/templates/page1.html
@@ -79,8 +79,8 @@
     <!-- Полоса энергии -->
 <!-- Отображение уровня энергии -->
 <div class="energy-status">
-  <span id="currentEnergyLabel">Текущая энергия: 100</span>
-  <span id="maxEnergyLabel">Максимальная энергия: 100</span>
+  <span id="currentEnergyLabel"></span>
+  <span id="maxEnergyLabel"></span>
 </div>
 
       <div class="dropdown">
@@ -578,8 +578,8 @@
 <script src="{{ url_for('static', filename='script_new.js') }}"></script>
 <script src="{{ url_for('static', filename='script.js') }}"></script>
 <script src="{{ url_for('static', filename='script_up.js') }}"></script>
-<script src="{{ url_for('static', filename='script_up_recovery.js') }}"></script>
 <script src="{{ url_for('static', filename='script_up_energy.js') }}"></script>
+<script src="{{ url_for('static', filename='script_up_recovery.js') }}"></script>
 <script src="{{ url_for('static', filename='script_heroes.js') }}"></script>
 <script src="{{ url_for('static', filename='script_autoclicker.js') }}"></script>
 <script src="{{ url_for('static', filename='boss.js') }}"></script>
