--- a/templates/page1.html
+++ b/templates/page1.html
@@ -54,6 +54,7 @@
   </div>
 
 
+
 <p id="energyRecoveryRateDisplay" style="color: white;">Скорость восстановления энергии: 5</p>
 
 <p id="coinsPerClickDisplay" style="color: white;">Монет за клик: 1</p>
@@ -77,9 +78,11 @@
     <div class="progress-label" id="progressLabel"></div>
 
     <!-- Полоса энергии -->
-    <div class="energy-container">
-      <div class="energy-bar" id="energyBar">100</div>
-    </div>
+<div class="energy-container">
+  <div class="energy-bar" id="energyBar"></div>
+  <div id="energyDisplay">100/100</div> <!-- Отображаем текущую энергию -->
+</div>
+
       <div class="dropdown">
     <img src="/static/images/menu.png" alt="Меню" id="menu-icon">
 
@@ -563,6 +566,7 @@
 <script src="{{ url_for('static', filename='script_new.js') }}"></script>
 <script src="{{ url_for('static', filename='script.js') }}"></script>
 <script src="{{ url_for('static', filename='script_up.js') }}"></script>
+<script src="{{ url_for('static', filename='script_up_energy.js') }}"></script>
 <script src="{{ url_for('static', filename='script_up_recovery.js') }}"></script>
 <script src="{{ url_for('static', filename='script_heroes.js') }}"></script>
 <script src="{{ url_for('static', filename='boss.js') }}"></script>
