autoclicker not work

--- a/templates/page1.html
+++ b/templates/page1.html
@@ -306,11 +306,11 @@
 </div>
 
 <div class="container_up">
-  <div class="item_up">
+  <div class="item_up1">
     <div class="item-icon">🤖</div>
     <div class="item-info">
       <p class="item-title">Кликер-бот</p>
-      <p class="item-details">2,000 / 1ч • Уровень 1</p>
+      <p class="item-details_1">2,000 / 1ч • Уровень 1</p>
     </div>
     <div class="item-action">></div>
   </div>
@@ -342,12 +342,12 @@
 
 <div class="background">
     <!-- Слой затемнения -->
-    <div class="overlay" style="display: none;"></div>
+    <div class="overlay_1" style="display: none;"></div>
 
     <!-- Окно -->
-    <div class="container_up_buy" style="display: none;">
+    <div class="container_up_buy_1" style="display: none;">
         <!-- Кнопка закрытия -->
-        <button class="close-button">&times;</button>
+        <button class="close-button_1">&times;</button>
 
         <!-- Картинка сверху -->
         <div class="top-image">
@@ -364,9 +364,9 @@
         <div class="price_up_buy">
             <!-- Картинка монеты -->
             <img class="coin-icon" src="/static/images/coin.png" alt="Монета" />
-            <span class="coin">2,000</span>
+            <span class="coin_up1">2,000</span>
         </div>
-        <button class="upgrade-button">КУПИТЬ</button>
+        <button class="upgrade-button_1">КУПИТЬ</button>
     </div>
 </div>
 
@@ -568,6 +568,7 @@
 <script src="{{ url_for('static', filename='script_up.js') }}"></script>
 <script src="{{ url_for('static', filename='script_up_energy.js') }}"></script>
 <script src="{{ url_for('static', filename='script_up_recovery.js') }}"></script>
+<script src="{{ url_for('static', filename='script_autoclicker.js') }}"></script>
 <script src="{{ url_for('static', filename='script_heroes.js') }}"></script>
 <script src="{{ url_for('static', filename='boss.js') }}"></script>
 
