--- a/static/style.css
+++ b/static/style.css
@@ -1290,7 +1290,7 @@ body.up_page {
   gap: 0px; /* Расстояние между элементами */
 }
 
-.item_up,
+.item_up1,
 .item_up2,
 .item_up3,
 .item_up4 {
@@ -1306,7 +1306,7 @@ body.up_page {
   overflow: hidden;
 }
 
-.item_up > *, .item_up2 > *, .item_up3 > *, .item_up4 > * {
+.item_up1 > *, .item_up2 > *, .item_up3 > *, .item_up4 > * {
   transform: skew(10deg); /* Обратный наклон для внутренних элементов */
 }
 
@@ -1335,11 +1335,14 @@ body.up_page {
   color: white;
 }
 
+.item-details_1 {
+  font-size: 14px;
+  color: #d1a34a;
+}
 .item-details {
   font-size: 14px;
   color: #d1a34a;
 }
-
 .item-details_3 {
   font-size: 14px;
   color: #d1a34a;
@@ -1377,6 +1380,21 @@ body.up_page {
 }
 
 /* Общие стили окна */
+.container_up_buy_1 {
+    text-align: center;
+    background-color: #2e2e3a;
+    padding: 20px;
+    border-radius: 20px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+    max-width: 400px;
+    width: 90%;
+    height: 500px; /* Измените высоту здесь */
+    position: absolute;
+    bottom: 120px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 999;
+}
 .container_up_buy_2 {
     text-align: center;
     background-color: #2e2e3a;
@@ -1432,6 +1450,15 @@ body.up_page {
     background: rgba(0, 0, 0, 0.5);
     z-index: 998;
 }
+.overlay_1 {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 998;
+}
 .overlay_3 {
     position: fixed;
     top: 0;
@@ -1451,6 +1478,18 @@ body.up_page {
     z-index: 998;
 }
 /* Кнопка закрытия */
+.close-button_1 {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: none;
+    border: none;
+    font-size: 24px;
+    color: #fff;
+    cursor: pointer;
+    z-index: 1000;
+    transition: transform 0.3s ease;
+}
 .close-button {
     position: absolute;
     top: 10px;
