--- a/templates/page1.html
+++ b/templates/page1.html
@@ -290,8 +290,8 @@
     <img src="/static/images/frog.png" alt="Character 11">
     <p>Character 11</p>
   </div>
-      <div class="character" data-id="12" data-name="Character 12" data-img="/static/images/drako.png" data-description="Water is calm and adaptable, flowing through challenges.">
-    <img src="/static/images/drako.png" alt="Character 12">
+      <div class="character" data-id="12" data-name="Character 12" data-img="/static/images/leon.png" data-description="Water is calm and adaptable, flowing through challenges.">
+    <img src="/static/images/leon.png" alt="Character 12">
     <p>Character 12</p>
   </div>
 </div>
