--- a/static/style.css
+++ b/static/style.css
@@ -1595,6 +1595,16 @@ body.up_page {
     margin: 5px 0; /* Установите небольшой верхний отступ, если необходимо */
 }
 
+.upgrade-button_1 {
+    background-color: #ffaa00;
+    border: none;
+    border-radius: 10px;
+    color: #ffffff;
+    font-size: 18px;
+    padding: 10px 20px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
 .upgrade-button {
     background-color: #ffaa00;
     border: none;
