--- a/templates/page1.html
+++ b/templates/page1.html
@@ -128,7 +128,51 @@
   </div>
 </div>
   </div>
+      <div class="background">
+    <!-- Слой затемнения -->
+    <div class="overlay_box1" style="display: none;"></div>
+    <!-- Окно -->
+    <div class="container_box_1" style="display: none;">
+        <!-- Кнопка закрытия -->
+        <button class="close-button_box1">&times;</button>
 
+        <!-- Картинка сверху -->
+        <div class="top-image">
+            <img src="/static/images/box_1.png" alt="Символ" />
+        </div>
+
+        <div class="character_up_buy"></div>
+        <h1 class="title">Сундук Героя</h1>
+        <p class="description">
+            Здесь можно выбить <br>
+            нового перса
+        </p>
+        <div class="price_up_buy">
+            <!-- Картинка монеты -->
+            <img class="coin-icon" src="/static/images/coin.png" alt="Монета" />
+            <span class="coin_up_box1">2,000</span>
+        </div>
+        <button class="upgrade-button_box1">КУПИТЬ</button>
+    </div>
+</div>
+
+
+<div class="background">
+    <div class="overlay_box1" style="display: none;"></div>
+    <!-- Окно для открытия коробки -->
+    <div class="container_box_11" style="display: none;">
+        <button class="close-button_box1">&times;</button>
+        <div class="top-image">
+            <img src="/static/images/croco.png" alt="Символ" />
+        </div>
+        <div class="character_up_buy"></div>
+        <h1 class="title">ВЫ ВЫБИЛИ ГЕРОЯ:</h1>
+        <div class="reward-image">
+            <img id="rewardImage" src="" alt="Герой" />
+        </div>
+        <button class="close-reward-button">ЗАКРЫТЬ</button>
+    </div>
+</div>
 <!-- Магазин -->
   <div class="page" id="shop" style="display:none;height: 1000px;">
 <p class="score"><span class="currentScore">0</span></p>
@@ -559,9 +603,9 @@
 <script src="{{ url_for('static', filename='script_up_energy.js') }}"></script>
 <script src="{{ url_for('static', filename='script_up_recovery.js') }}"></script>
 <script src="{{ url_for('static', filename='script_autoclicker.js') }}"></script>
-<script src="{{ url_for('static', filename='script_heroes.js') }}"></script>
 <script src="{{ url_for('static', filename='script_box.js') }}"></script>
-<script src="{{ url_for('static', filename='boss.js') }}"></script>
+<script src="{{ url_for('static', filename='script_heroes.js') }}"></script>
+
 
 
 </body>
